<resources>
    <string name="app_name">Testmidterm</string>
    <string name="EditTextUser">Username</string>
    <string name="EditTextPass">Password</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome :</string>
    <string name="textview">TextView</string>
    <string name="loginbtn">Login</string>
    <string name="bgColor">Dark theme</string>
    <string name="nextbtn">Next</string>
    <string name="homeBtn">Home</string>
    <string name="map">map</string>
    <string name="youtube">youtube</string>
    <string name="date">date</string>
</resources>