<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".Main2">

    <Button
        android:id="@+id/bgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:text="@string/bgColor"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <GridLayout
            android:id="@+id/GridLayout"
            android:layout_width="352dp"
            android:layout_height="388dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="128dp"
            android:horizontalSpacing="4dp"
            android:numColumns="3"
            android:verticalSpacing="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass">

            <ImageButton

                android:id="@+id/imageButton"
                android:layout_width="121dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/b"
                app:layout_column="0"
                app:layout_row="0"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="121dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/d"
                app:layout_column="1"
                app:layout_row="0"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="121dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/e"
                app:layout_column="2"
                app:layout_row="0"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="119dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/j"
                app:layout_column="0"
                app:layout_row="1"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="119dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/k"
                app:layout_column="1"
                app:layout_row="1"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="119dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/l"
                app:layout_column="2"
                app:layout_row="1"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="113dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/m"
                app:layout_column="0"
                app:layout_row="2"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="113dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/n"
                app:layout_column="3"
                app:layout_row="3"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="113dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/o"

                app:layout_column="2"

                app:layout_row="2"
                tools:ignore="ContentDescription" />

        </GridLayout>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="162dp"
            android:layout_marginTop="634dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="49dp"
            android:text="@string/nextbtn" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="96dp"
            android:layout_marginTop="119dp"
            android:layout_marginEnd="91dp"
            android:layout_marginBottom="580dp"
            android:text="@string/textview"
            android:textSize="24sp"
            android:typeface="normal" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>